@@ -6,17 +6,17 @@ import com.esdc.gameapi.domain.dto.UserAchievementDto;
 import com.esdc.gameapi.exception.GlobalExceptionHandler;
 import com.esdc.gameapi.exception.ResourceNotFoundException;
 import com.esdc.gameapi.service.AchievementService;
+import com.esdc.gameapi.service.AdminAuthService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
-import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
@@ -27,8 +27,7 @@ import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -42,6 +41,9 @@ class AchievementControllerTest {
 
   @Mock
   private AchievementService achievementService;
+
+  @Mock
+  private AdminAuthService adminAuthService;
 
   @InjectMocks
   private AchievementController achievementController;
@@ -59,10 +61,6 @@ class AchievementControllerTest {
   void setUp() {
     objectMapper = new ObjectMapper();
 
-    // Установка admin password через рефлексию
-    ReflectionTestUtils.setField(achievementController, "adminPassword", CORRECT_ADMIN_PASSWORD);
-
-    // Настройка MockMvc с обработчиком исключений
     mockMvc = MockMvcBuilders.standaloneSetup(achievementController)
         .setControllerAdvice(new GlobalExceptionHandler())
         .build();
@@ -73,21 +71,21 @@ class AchievementControllerTest {
         .achievementDescription("Complete level 1")
         .build();
 
-    String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+    String timestamp = LocalDateTime.now()
+        .format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
     testUserAchievementDto = UserAchievementDto.builder()
         .achievementId(1L)
         .achievementName("First Steps")
         .achievementDescription("Complete level 1")
+        .createdAt(timestamp)
         .build();
   }
 
   // ========== GET All Achievements Tests ==========
 
   @Test
-  @Tag("unit")
   @DisplayName("Should return all achievements")
   void shouldReturnAllAchievements() throws Exception {
-    // Arrange
     AchievementDto achievement2 = AchievementDto.builder()
         .id(2L)
         .achievementName("Speed Runner")
@@ -97,7 +95,6 @@ class AchievementControllerTest {
     List<AchievementDto> achievements = Arrays.asList(testAchievementDto, achievement2);
     when(achievementService.getAllAchievements()).thenReturn(achievements);
 
-    // Act & Assert
     mockMvc.perform(get("/api/achievements")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isOk())
@@ -113,13 +110,10 @@ class AchievementControllerTest {
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should return empty list when no achievements exist")
   void shouldReturnEmptyListWhenNoAchievementsExist() throws Exception {
-    // Arrange
     when(achievementService.getAllAchievements()).thenReturn(Collections.emptyList());
 
-    // Act & Assert
     mockMvc.perform(get("/api/achievements")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isOk())
@@ -132,14 +126,11 @@ class AchievementControllerTest {
   // ========== GET User Achievements Tests ==========
 
   @Test
-  @Tag("unit")
   @DisplayName("Should return user achievements")
   void shouldReturnUserAchievements() throws Exception {
-    // Arrange
-    List<UserAchievementDto> userAchievements = Arrays.asList(testUserAchievementDto);
+    List<UserAchievementDto> userAchievements = List.of(testUserAchievementDto);
     when(achievementService.getAchievementsByUserId(1L)).thenReturn(userAchievements);
 
-    // Act & Assert
     mockMvc.perform(get("/api/achievements/user/1")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isOk())
@@ -153,13 +144,10 @@ class AchievementControllerTest {
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should return empty list when user has no achievements")
   void shouldReturnEmptyListWhenUserHasNoAchievements() throws Exception {
-    // Arrange
     when(achievementService.getAchievementsByUserId(1L)).thenReturn(Collections.emptyList());
 
-    // Act & Assert
     mockMvc.perform(get("/api/achievements/user/1")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isOk())
@@ -169,14 +157,11 @@ class AchievementControllerTest {
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should handle user not found when getting achievements")
   void shouldHandleUserNotFoundWhenGettingAchievements() throws Exception {
-    // Arrange
     when(achievementService.getAchievementsByUserId(999L))
         .thenThrow(new ResourceNotFoundException("User", "id", 999L));
 
-    // Act & Assert
     mockMvc.perform(get("/api/achievements/user/999")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isNotFound());
@@ -187,10 +172,8 @@ class AchievementControllerTest {
   // ========== POST Create Achievement Tests ==========
 
   @Test
-  @Tag("unit")
   @DisplayName("Should create achievement with valid admin password")
   void shouldCreateAchievementWithValidAdminPassword() throws Exception {
-    // Arrange
     AchievementDto createDto = AchievementDto.builder()
         .achievementName("First Steps")
         .achievementDescription("Complete level 1")
@@ -199,7 +182,8 @@ class AchievementControllerTest {
     when(achievementService.createAchievement(any(AchievementDto.class)))
         .thenReturn(testAchievementDto);
 
-    // Act & Assert
+    doNothing().when(adminAuthService).validateAdminPassword(CORRECT_ADMIN_PASSWORD);
+
     mockMvc.perform(post("/api/achievements/create")
             .header(ADMIN_PASSWORD_HEADER, CORRECT_ADMIN_PASSWORD)
             .contentType(MediaType.APPLICATION_JSON)
@@ -210,40 +194,42 @@ class AchievementControllerTest {
         .andExpect(jsonPath("$.achievementName").value("First Steps"))
         .andExpect(jsonPath("$.achievementDescription").value("Complete level 1"));
 
-    verify(achievementService, times(1)).createAchievement(any(AchievementDto.class));
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(CORRECT_ADMIN_PASSWORD);
+    verify(achievementService, times(1))
+        .createAchievement(any(AchievementDto.class));
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should reject creation with invalid admin password")
   void shouldRejectCreationWithInvalidAdminPassword() throws Exception {
-    // Arrange
     AchievementDto createDto = AchievementDto.builder()
         .achievementName("First Steps")
         .achievementDescription("Complete level 1")
         .build();
 
-    // Act & Assert
+    doThrow(new com.esdc.gameapi.exception.UnauthorizedException("Invalid admin password"))
+        .when(adminAuthService).validateAdminPassword(INCORRECT_ADMIN_PASSWORD);
+
     mockMvc.perform(post("/api/achievements/create")
             .header(ADMIN_PASSWORD_HEADER, INCORRECT_ADMIN_PASSWORD)
             .contentType(MediaType.APPLICATION_JSON)
             .content(objectMapper.writeValueAsString(createDto)))
         .andExpect(status().isUnauthorized());
 
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(INCORRECT_ADMIN_PASSWORD);
     verify(achievementService, never()).createAchievement(any());
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should reject creation without admin password header")
   void shouldRejectCreationWithoutAdminPasswordHeader() throws Exception {
-    // Arrange
     AchievementDto createDto = AchievementDto.builder()
         .achievementName("First Steps")
         .achievementDescription("Complete level 1")
         .build();
 
-    // Act & Assert
     mockMvc.perform(post("/api/achievements/create")
             .contentType(MediaType.APPLICATION_JSON)
             .content(objectMapper.writeValueAsString(createDto)))
@@ -253,32 +239,31 @@ class AchievementControllerTest {
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should reject creation with empty admin password")
   void shouldRejectCreationWithEmptyAdminPassword() throws Exception {
-    // Arrange
     AchievementDto createDto = AchievementDto.builder()
         .achievementName("First Steps")
         .achievementDescription("Complete level 1")
         .build();
 
-    // Act & Assert
+    doThrow(new com.esdc.gameapi.exception.UnauthorizedException("Invalid admin password"))
+        .when(adminAuthService).validateAdminPassword("");
+
     mockMvc.perform(post("/api/achievements/create")
             .header(ADMIN_PASSWORD_HEADER, "")
             .contentType(MediaType.APPLICATION_JSON)
             .content(objectMapper.writeValueAsString(createDto)))
         .andExpect(status().isUnauthorized());
 
+    verify(adminAuthService, times(1)).validateAdminPassword("");
     verify(achievementService, never()).createAchievement(any());
   }
 
   // ========== PUT Update Achievement Tests ==========
 
   @Test
-  @Tag("unit")
   @DisplayName("Should update achievement with valid admin password")
   void shouldUpdateAchievementWithValidAdminPassword() throws Exception {
-    // Arrange
     AchievementDto updateDto = AchievementDto.builder()
         .achievementName("Updated Name")
         .achievementDescription("Updated description")
@@ -292,8 +277,8 @@ class AchievementControllerTest {
 
     when(achievementService.updateAchievement(eq(1L), any(AchievementDto.class)))
         .thenReturn(updatedAchievement);
+    doNothing().when(adminAuthService).validateAdminPassword(CORRECT_ADMIN_PASSWORD);
 
-    // Act & Assert
     mockMvc.perform(put("/api/achievements/update/1")
             .header(ADMIN_PASSWORD_HEADER, CORRECT_ADMIN_PASSWORD)
             .contentType(MediaType.APPLICATION_JSON)
@@ -304,34 +289,37 @@ class AchievementControllerTest {
         .andExpect(jsonPath("$.achievementName").value("Updated Name"))
         .andExpect(jsonPath("$.achievementDescription").value("Updated description"));
 
-    verify(achievementService, times(1)).updateAchievement(eq(1L), any(AchievementDto.class));
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(CORRECT_ADMIN_PASSWORD);
+    verify(achievementService, times(1))
+        .updateAchievement(eq(1L), any(AchievementDto.class));
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should reject update with invalid admin password")
   void shouldRejectUpdateWithInvalidAdminPassword() throws Exception {
-    // Arrange
     AchievementDto updateDto = AchievementDto.builder()
         .achievementName("Updated Name")
         .achievementDescription("Updated description")
         .build();
 
-    // Act & Assert
+    doThrow(new com.esdc.gameapi.exception.UnauthorizedException("Invalid admin password"))
+        .when(adminAuthService).validateAdminPassword(INCORRECT_ADMIN_PASSWORD);
+
     mockMvc.perform(put("/api/achievements/update/1")
             .header(ADMIN_PASSWORD_HEADER, INCORRECT_ADMIN_PASSWORD)
             .contentType(MediaType.APPLICATION_JSON)
             .content(objectMapper.writeValueAsString(updateDto)))
         .andExpect(status().isUnauthorized());
 
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(INCORRECT_ADMIN_PASSWORD);
     verify(achievementService, never()).updateAchievement(any(), any());
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should handle achievement not found when updating")
   void shouldHandleAchievementNotFoundWhenUpdating() throws Exception {
-    // Arrange
     AchievementDto updateDto = AchievementDto.builder()
         .achievementName("Updated Name")
         .achievementDescription("Updated description")
@@ -339,51 +327,55 @@ class AchievementControllerTest {
 
     when(achievementService.updateAchievement(eq(999L), any(AchievementDto.class)))
         .thenThrow(new ResourceNotFoundException("Achievement", "id", 999L));
+    doNothing().when(adminAuthService).validateAdminPassword(CORRECT_ADMIN_PASSWORD);
 
-    // Act & Assert
     mockMvc.perform(put("/api/achievements/update/999")
             .header(ADMIN_PASSWORD_HEADER, CORRECT_ADMIN_PASSWORD)
             .contentType(MediaType.APPLICATION_JSON)
             .content(objectMapper.writeValueAsString(updateDto)))
         .andExpect(status().isNotFound());
 
-    verify(achievementService, times(1)).updateAchievement(eq(999L), any(AchievementDto.class));
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(CORRECT_ADMIN_PASSWORD);
+    verify(achievementService, times(1))
+        .updateAchievement(eq(999L), any(AchievementDto.class));
   }
 
   // ========== DELETE Achievement Tests ==========
 
   @Test
-  @Tag("unit")
   @DisplayName("Should delete achievement with valid admin password")
   void shouldDeleteAchievementWithValidAdminPassword() throws Exception {
-    // Arrange
     doNothing().when(achievementService).deleteAchievement(1L);
+    doNothing().when(adminAuthService).validateAdminPassword(CORRECT_ADMIN_PASSWORD);
 
-    // Act & Assert
     mockMvc.perform(delete("/api/achievements/delete/1")
             .header(ADMIN_PASSWORD_HEADER, CORRECT_ADMIN_PASSWORD))
         .andExpect(status().isNoContent());
 
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(CORRECT_ADMIN_PASSWORD);
     verify(achievementService, times(1)).deleteAchievement(1L);
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should reject deletion with invalid admin password")
   void shouldRejectDeletionWithInvalidAdminPassword() throws Exception {
-    // Act & Assert
+    doThrow(new com.esdc.gameapi.exception.UnauthorizedException("Invalid admin password"))
+        .when(adminAuthService).validateAdminPassword(INCORRECT_ADMIN_PASSWORD);
+
     mockMvc.perform(delete("/api/achievements/delete/1")
             .header(ADMIN_PASSWORD_HEADER, INCORRECT_ADMIN_PASSWORD))
         .andExpect(status().isUnauthorized());
 
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(INCORRECT_ADMIN_PASSWORD);
     verify(achievementService, never()).deleteAchievement(any());
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should reject deletion without admin password header")
   void shouldRejectDeletionWithoutAdminPasswordHeader() throws Exception {
-    // Act & Assert
     mockMvc.perform(delete("/api/achievements/delete/1"))
         .andExpect(status().isInternalServerError());
 
@@ -391,48 +383,49 @@ class AchievementControllerTest {
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should handle achievement not found when deleting")
   void shouldHandleAchievementNotFoundWhenDeleting() throws Exception {
-    // Arrange
+    doNothing().when(adminAuthService).validateAdminPassword(CORRECT_ADMIN_PASSWORD);
     doThrow(new ResourceNotFoundException("Achievement", "id", 999L))
         .when(achievementService).deleteAchievement(999L);
 
-    // Act & Assert
     mockMvc.perform(delete("/api/achievements/delete/999")
             .header(ADMIN_PASSWORD_HEADER, CORRECT_ADMIN_PASSWORD))
         .andExpect(status().isNotFound());
 
+    verify(adminAuthService, times(1))
+        .validateAdminPassword(CORRECT_ADMIN_PASSWORD);
     verify(achievementService, times(1)).deleteAchievement(999L);
   }
 
   // ========== Admin Password Validation Tests ==========
 
   @Test
-  @Tag("unit")
   @DisplayName("Should reject case-sensitive password mismatch")
   void shouldRejectCaseSensitivePasswordMismatch() throws Exception {
-    // Arrange
     AchievementDto createDto = AchievementDto.builder()
         .achievementName("Test")
         .achievementDescription("Test achievement")
         .build();
 
-    // Act & Assert
+    doThrow(new com.esdc.gameapi.exception.UnauthorizedException("Invalid admin password"))
+        .when(adminAuthService).validateAdminPassword("TESTADMINPASSWORD123");
+
     mockMvc.perform(post("/api/achievements/create")
             .header(ADMIN_PASSWORD_HEADER, "TESTADMINPASSWORD123")
             .contentType(MediaType.APPLICATION_JSON)
             .content(objectMapper.writeValueAsString(createDto)))
         .andExpect(status().isUnauthorized());
+
+    verify(adminAuthService, times(1))
+        .validateAdminPassword("TESTADMINPASSWORD123");
   }
 
   // ========== Multiple Achievements Tests ==========
 
   @Test
-  @Tag("unit")
   @DisplayName("Should handle multiple achievements with different descriptions")
   void shouldHandleMultipleAchievementsWithDifferentDescriptions() throws Exception {
-    // Arrange
     List<AchievementDto> achievements = Arrays.asList(
         AchievementDto.builder()
             .id(1L)
@@ -453,7 +446,6 @@ class AchievementControllerTest {
 
     when(achievementService.getAllAchievements()).thenReturn(achievements);
 
-    // Act & Assert
     mockMvc.perform(get("/api/achievements")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isOk())
@@ -461,13 +453,13 @@ class AchievementControllerTest {
         .andExpect(jsonPath("$[0].achievementDescription").value("Complete level 1"))
         .andExpect(jsonPath("$[1].achievementDescription").value("Kill 100 enemies"))
         .andExpect(jsonPath("$[2].achievementDescription").value("Solve 50 puzzles"));
+
+    verify(achievementService, times(1)).getAllAchievements();
   }
 
   @Test
-  @Tag("unit")
   @DisplayName("Should handle user with multiple unlocked achievements")
   void shouldHandleUserWithMultipleUnlockedAchievements() throws Exception {
-    // Arrange
     List<UserAchievementDto> userAchievements = Arrays.asList(
         UserAchievementDto.builder()
             .achievementId(1L)
@@ -483,7 +475,6 @@ class AchievementControllerTest {
 
     when(achievementService.getAchievementsByUserId(1L)).thenReturn(userAchievements);
 
-    // Act & Assert
     mockMvc.perform(get("/api/achievements/user/1")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isOk())
@@ -494,5 +485,7 @@ class AchievementControllerTest {
         .andExpect(jsonPath("$[1].achievementId").value(2))
         .andExpect(jsonPath("$[1].achievementName").value("Speed Runner"))
         .andExpect(jsonPath("$[1].achievementDescription").value("Complete level in under 1 minute"));
+
+    verify(achievementService, times(1)).getAchievementsByUserId(1L);
   }
 }
